testsuite/tests/typecheck/should_fail/T20873c.stderr
T20873c.hs:10:1: error: [GHC-49378]
    • Illegal kind signature ‘Foo :: U Int’
    • In the data type declaration for ‘Foo’
    Suggested fix:
      Perhaps you intended to use the ‘KindSignatures’ extension (implied by ‘TypeFamilies’ and ‘PolyKinds’)

